# mcp-chrome-integration

./: README.md  smithery.yaml
mcp-client/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
mcp-server/: main.py  pyproject.toml  smithery.yaml
mcp-server/src/: managers.py  models.py  server.py  test.py
