[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "mcp[cli]>=1.6.0",
    "fastmcp>=2.1.2",
    "psutil>=5.9.0",
]

[project.scripts]
mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true